@@ -285,6 +285,7 @@ clink_dll("clink_app_dll")
     links("readline")
     links("version")
     links("shlwapi")
+    links("rpcrt4")
     files("clink/app/src/dll/main.cpp")
     files("clink/app/src/version.rc")
 
@@ -325,6 +326,7 @@ clink_exe("clink_test")
     links("lua")
     links("readline")
     links("shlwapi")
+    links("rpcrt4")
     includedirs("clink/test/src")
     includedirs("clink/app/src")
     includedirs("clink/core/include")
